ProductController with NUnitTests

--- a/Aphesia/Web.config
+++ b/Aphesia/Web.config
@@ -8,7 +8,7 @@
 
 <configuration>
 	<connectionStrings>
-		<add name="AphesiaDb" connectionString="Data Source=DESKTOP-BJQ7IU3\SQLEXPRESS;Initial Catalog=Aphesia;Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add name="AphesiaDb" connectionString="Data Source=DOTNETDEV\SQLEXPRESS;Initial Catalog=Aphesia;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0"/>
